# OpenGov-EarlyUkrainian

./: .gitignore  COMPLETION_SUMMARY.md  Dockerfile  GITHUB_PUBLICATION_SUMMARY.md  INSTALLATION_VERIFIED.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RENAME_COMPLETE.md  TEST_COVERAGE_REPORT.md  VERIFICATION_CHECKLIST.md  demo.sh  docker-compose.yml  main.txt  pyproject.toml  tox.ini
opengov_earlyukrainian/: __init__.py  cli.py  config.py
opengov_earlyukrainian/ai/: __init__.py  conversation.py
opengov_earlyukrainian/api/: __init__.py  main.py
opengov_earlyukrainian/core/: __init__.py  alphabet.py  business.py  cases.py  culture.py  pronunciation.py  srs.py  transliteration.py  verbs.py
tests/: __init__.py  test_ai_conversation.py  test_alphabet.py  test_api.py  test_business_culture.py  test_cases.py  test_cli.py  test_pronunciation_srs.py  test_verbs_translit.py
